--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -13,8 +13,8 @@
 
 }
 
-@using System.Globalization;
-@{
+    @using System.Globalization;
+    @{
     NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
     formato.CurrencyGroupSeparator = ",";
     formato.NumberDecimalSeparator = ".";
@@ -32,18 +32,18 @@
             background: white;
         }
     </style>
- 
+
 
 
 }
 
 
-@section scripts{
+    @section scripts{
 
-   
+
     <script>
-        $(document).ready(function () {
-            jQuery(document).ready(function ($) {
+        $(document).ready(function() {
+            jQuery(document).ready(function($) {
 
             });
 
@@ -54,103 +54,67 @@
         function enviarSAP(id) {
 
             var modale = $("#divProcesando");
-              $.ajax({
-                        type: 'GET',
+            $.ajax({
+                type: 'GET',
 
-                        url: '@Url.Page("Index", "EnviarSAP")',
-                        dataType: 'json',
+                url: '@Url.Page("Index", "EnviarSAP")',
+                dataType: 'json',
                 data: { idB: id },
-                        headers: {
-                            RequestVerificationToken: $('input:hidden[name="__RequestVerificationToken"]').val()
-                        },
-                        success: function (json) {
+                headers: {
+                    RequestVerificationToken: $('input:hidden[name="__RequestVerificationToken"]').val()
+                },
+                success: function(json) {
 
-                            modale.hide();
-                            $('body').removeClass('modal-open');//eliminamos la clase del body para poder hacer scroll
-                            $('.modal-backdrop').remove();//eliminamos el backdrop del modal
+                    modale.hide();
+                    $('body').removeClass('modal-open');//eliminamos la clase del body para poder hacer scroll
+                    $('.modal-backdrop').remove();//eliminamos el backdrop del modal
 
 
-                            console.log(json);
-                            if (json.procesadaSAP) {
-                                Swal.fire({
-                                    title: "Ha sido enviado con éxito",
+                    console.log(json);
+                    if (json.procesadaSAP) {
+                        Swal.fire({
+                            title: "Ha sido enviado con éxito",
 
-                                    icon: 'success',
-                                    showCancelButton: false,
-                                    customClass: {
-                                        confirmButton: 'swalBtnColor',
+                            icon: 'success',
+                            showCancelButton: false,
+                            customClass: {
+                                confirmButton: 'swalBtnColor',
 
-                                    },
-                                    confirmButtonText: 'OK'
-                                }).then((result) => {
-                                    if (result.isConfirmed) {
-                                        location.reload();
-                                    }
-                                });
-                            } else {
-                                Swal.fire({
-                                    icon: 'error',
-                                    title: 'Oops...',
-                                    text: 'Ha ocurrido un error al intentar enviar a SAP, revisa la bitacora de errores'
-
-                                })
+                            },
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
                             }
+                        });
+                    } else {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Oops...',
+                            text: 'Ha ocurrido un error al intentar enviar a SAP, revisa la bitacora de errores'
+
+                        })
+                    }
 
 
-                        },
+                },
 
-                  beforeSend: function (xhr) {
-                      modale.modal("show");
-                        },
-                        complete: function () {
+                beforeSend: function(xhr) {
+                    modale.modal("show");
+                },
+                complete: function() {
 
-                        },
-                        error: function (error) {
-                            modale.hide();
-                        }
-                    });
+                },
+                error: function(error) {
+                    modale.hide();
+                }
+            });
         }
 
-        function ImprimeEtiqueta(boleta, cliente) {
-            var html = '<html> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">';
-            html += '<body>'
-
-            html += '<div class="row"> <div class="col-sm-12"> <br> </div> </div>';
-          //  html += $("#idHtml2").html();
-            html += ' <div class="row" style="text-align: center;">';
-            html += '  <div class="col-sm-1"></div>';
-            html += '  <div class="col-sm-10"> ';
-
-            html +=  '<p>'+ boleta + '</p>';
-            html +=  '<p>' + cliente + '</p>';
-
-            html += ' </div>';
-            html += '  <div class="col-sm-1"></div>';
-
-            html += ' </div>';
-
-            html += "</body></html>"
-            var item = html;
-
-            var opt = {
-                margin: [10, 5, 15, 5],
-                pagebreak: { before: '.cuidado' },
-
-                image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { scale: 2 },
-                jsPDF: { format: 'letter', orientation: 'portrait' }
-            };
+        
 
 
-
-            html2pdf().set(opt)
-                .from(item)
-                .save("Boleta"+boleta+".pdf");
-
-        }
-
-
-           var ids = 0;
+        var ids = 0;
         var correo = '';
         function onClickModal(id, correos) {
             ids = id;
@@ -188,100 +152,143 @@
 
         }
 
-        function  Reenviar() {
+        function Reenviar() {
 
-         $.ajax({
-                        type: 'GET',
-                        dataType: 'json',
-             url: '@Url.Page("Index", "Reenviar")',
-             data: { id: ids, correos: correo },
-             success: function (result) {
-                 console.log(result);
-                             if (result == false) {
-                                 ids = 0;
-                                 Swal.fire({
-                                     icon: 'error',
-                                     title: 'Oops...',
-                                     text: 'Ha ocurrido un error al intentar reenviar'
+            $.ajax({
+                type: 'GET',
+                dataType: 'json',
+                url: '@Url.Page("Index", "Reenviar")',
+                data: { id: ids, correos: correo },
+                success: function(result) {
+                    console.log(result);
+                    if (result == false) {
+                        ids = 0;
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Oops...',
+                            text: 'Ha ocurrido un error al intentar reenviar'
 
-                                 })
+                        })
 
-                             } else {
-                                 Swal.fire({
-                                     title: "Ha sido reenviado con éxito",
+                    } else {
+                        Swal.fire({
+                            title: "Ha sido reenviado con éxito",
 
-                                     icon: 'success',
-                                     showCancelButton: false,
-                                     customClass: {
-                                         confirmButton: 'swalBtnColor',
+                            icon: 'success',
+                            showCancelButton: false,
+                            customClass: {
+                                confirmButton: 'swalBtnColor',
 
-                                     },
-                                     confirmButtonText: 'OK'
-                                 }).then((result) => {
-                                     if (result.isConfirmed) {
+                            },
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
 
-                                     }
-                                 })
-                             }
-             },
-             beforeSend: function () {
+                            }
+                        })
+                    }
+                },
+                beforeSend: function() {
 
-             }
-                     })
+                }
+            })
         }
+    
+                            
+                            
+                                
+        function ImprimeEtiqueta(boleta, cliente) {
+            var html = '<html> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">';
+            html += '<body>';
+
+            html += '<div class="row"> <div class="col-sm-12"> <br> </div> </div>';
+            //  html += $("#idHtml2").html();
+            html += ' <div class="row" style="text-align: center;">';
+            html += '  <div class="col-sm-1"></div>';
+            html += '  <div class="col-sm-10"> ';
+
+            html += '<p>' + boleta + '</p>';
+            html += '<p>' + cliente + '</p>';
+
+            html += ' </div>';
+            html += '  <div class="col-sm-1"></div>';
+
+            html += ' </div>';
+
+
+            html += "";
+            var item = html;
+
+            var opt = {
+                margin: [10, 5, 15, 5],
+                pagebreak: { before: '.cuidado' },
+
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2 },
+                jsPDF: { format: 'letter', orientation: 'portrait' }
+            };
+
+
+
+            html2pdf().set(opt)
+                .from(item)
+                .save("Boleta" + boleta + ".pdf");
+
+        }                            
+                            
     </script>
 
 }
-@using Microsoft.AspNetCore.Http
-@using System;
-@using System.Collections.Generic;
-@using System.IO;
-@using System.Linq;
-@using System.Security.Claims;
-@using System.Threading.Tasks;
-@using Microsoft.AspNetCore.Mvc;
-@using Microsoft.AspNetCore.Mvc.RazorPages;
-@using Microsoft.Extensions.Configuration;
-@using Refit;
-@using Sicsoft.Checkin.Web.Models;
-@inject IHttpContextAccessor httpContextAccessor
+    @using Microsoft.AspNetCore.Http
+    @using System;
+    @using System.Collections.Generic;
+    @using System.IO;
+    @using System.Linq;
+    @using System.Security.Claims;
+    @using System.Threading.Tasks;
+    @using Microsoft.AspNetCore.Mvc;
+    @using Microsoft.AspNetCore.Mvc.RazorPages;
+    @using Microsoft.Extensions.Configuration;
+    @using Refit;
+    @using Sicsoft.Checkin.Web.Models;
+    @inject IHttpContextAccessor httpContextAccessor
 
-<div class="row">
-    <div class="col-md-12   ">
-        <div class="card">
-            <div class="card-header">
-                <h4 class="card-title">Filtro</h4>
+    <div class="row">
+        <div class="col-md-12   ">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Filtro</h4>
 
-            </div>
-            <div class="card-body">
-                <form method="get">
-                    <div class="row">
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Inicial</label>
-                                <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                </div>
+                <div class="card-body">
+                    <form method="get">
+                        <div class="row">
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Inicial</label>
+                                    <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                                </div>
+
+
                             </div>
 
-
-                        </div>
-
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Final</label>
-                                <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Final</label>
+                                    <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-4 pl-1">
+                            <div class="col-md-4 pl-1">
 
-                          
 
-                            <div class="form-group">
-                                <label>Status</label>
 
-                                <select id="heard" class="form-control" asp-for="filtro.Codigo2">
-                                    <option value="0"> Seleccione </option>
-                                    @foreach (var item in Model.Status)
+                                <div class="form-group">
+                                    <label>Status</label>
+
+                                    <select id="heard" class="form-control" asp-for="filtro.Codigo2">
+                                        <option value="0"> Seleccione </option>
+                                        @foreach (var item in Model.Status)
                                     {
                                         <option value="@item.idSAP"> @item.Nombre </option>
                                     }
@@ -355,7 +362,9 @@
                                     <td>@item.CardCode - @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName</td>
                                     <td>@item.ItemCode - @item.SerieFabricante</td>
                                     <td>@item.Asunto</td>
-                                    @{ var status = item.Status.ToString(); }
+                                    @{
+                                        var status = item.Status.ToString();
+                                    }
                                     <td>@(Model.Status.Where(a => a.idSAP == status).FirstOrDefault() == null ? "" : Model.Status.Where(a => a.idSAP == status).FirstOrDefault().Nombre) </td>
 
                                     <td>
