--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -13,8 +13,8 @@
 
 }
 
-@using System.Globalization;
-@{
+    @using System.Globalization;
+    @{
     NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
     formato.CurrencyGroupSeparator = ",";
     formato.NumberDecimalSeparator = ".";
@@ -36,26 +36,26 @@
 }
 
 
-@section scripts{
+    @section scripts{
 
 
     <script>
-        $(document).ready(function () {
-            jQuery(document).ready(function ($) {
+        $(document).ready(function() {
+            jQuery(document).ready(function($) {
 
             });
 
 
 
-            $(document).ready(function () {
-               // $('#tablita').DataTable();
+            $(document).ready(function() {
+                // $('#tablita').DataTable();
             });
 
 
         });
 
-         var ids = 0;
-       
+        var ids = 0;
+
         function onClickModal(id) {
 
             ids = id;
@@ -83,46 +83,46 @@
 
         }
 
-        function  Estado() {
+        function Estado() {
 
-         $.ajax({
-                        type: 'GET',
-                        dataType: 'json',
-             url: '@Url.Page("Index", "Estado")',
-             data: { id: ids },
-             success: function (result) {
-                 console.log(result);
-                             if (result == false) {
-                                 ids = 0;
-                                 Swal.fire({
-                                     icon: 'error',
-                                     title: 'Oops...',
-                                     text: 'Ha ocurrido un error al intentar hacerlo'
+            $.ajax({
+                type: 'GET',
+                dataType: 'json',
+                url: '@Url.Page("Index", "Estado")',
+                data: { id: ids },
+                success: function(result) {
+                    console.log(result);
+                    if (result == false) {
+                        ids = 0;
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Oops...',
+                            text: 'Ha ocurrido un error al intentar hacerlo'
 
-                                 })
+                        })
 
-                             } else {
-                                 Swal.fire({
-                                     title: "Ha sido cambiado con éxito",
+                    } else {
+                        Swal.fire({
+                            title: "Ha sido cambiado con éxito",
 
-                                     icon: 'success',
-                                     showCancelButton: false,
-                                     customClass: {
-                                         confirmButton: 'swalBtnColor',
+                            icon: 'success',
+                            showCancelButton: false,
+                            customClass: {
+                                confirmButton: 'swalBtnColor',
 
-                                     },
-                                     confirmButtonText: 'OK'
-                                 }).then((result) => {
-                                     if (result.isConfirmed) {
-                                         location.reload();
-                                     }
-                                 })
-                             }
-             },
-             beforeSend: function () {
+                            },
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
+                            }
+                        })
+                    }
+                },
+                beforeSend: function() {
 
-             }
-                     })
+                }
+            })
         }
 
 
@@ -130,49 +130,49 @@
     </script>
 
 }
-@using Microsoft.AspNetCore.Http
-@using System;
-@using System.Collections.Generic;
-@using System.IO;
-@using System.Linq;
-@using System.Security.Claims;
-@using System.Threading.Tasks;
-@using Microsoft.AspNetCore.Mvc;
-@using Microsoft.AspNetCore.Mvc.RazorPages;
-@using Microsoft.Extensions.Configuration;
-@using Refit;
-@using Sicsoft.Checkin.Web.Models;
-@inject IHttpContextAccessor httpContextAccessor
+    @using Microsoft.AspNetCore.Http
+    @using System;
+    @using System.Collections.Generic;
+    @using System.IO;
+    @using System.Linq;
+    @using System.Security.Claims;
+    @using System.Threading.Tasks;
+    @using Microsoft.AspNetCore.Mvc;
+    @using Microsoft.AspNetCore.Mvc.RazorPages;
+    @using Microsoft.Extensions.Configuration;
+    @using Refit;
+    @using Sicsoft.Checkin.Web.Models;
+    @inject IHttpContextAccessor httpContextAccessor
 
 
-<div class="row">
-    <div class="col-md-12   ">
-        <div class="card">
-            <div class="card-header">
-                <h4 class="card-title">Filtro</h4>
+    <div class="row">
+        <div class="col-md-12   ">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Filtro</h4>
 
-            </div>
-            <div class="card-body">
-                <form method="get">
-                    <div class="row">
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Inicial</label>
-                                <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                </div>
+                <div class="card-body">
+                    <form method="get">
+                        <div class="row">
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Inicial</label>
+                                    <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                                </div>
+
+
                             </div>
 
-
-                        </div>
-
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Final</label>
-                                <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Final</label>
+                                    <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-4 pl-1">
-                            @if (Model.bandera)
+                            <div class="col-md-4 pl-1">
+                                @if (Model.bandera)
                             {
                                 <div class="form-group">
                                     <label>Técnico</label>
@@ -204,10 +204,10 @@
                             <div class="form-group">
                                 <label>Estado de la Llamada</label>
                                 <select id="estadoLlamada" class="form-control" asp-for="filtro.Codigo3">
-                                      <option value="0">Seleccione</option>
-                                    @foreach(var item in Model.Status)
+                                    <option value="0">Seleccione</option>
+                                    @foreach (var item in Model.Status)
                                     {
-                                         <option value="@item.idSAP">@item.idSAP - @item.Nombre</option>
+                                        <option value="@item.idSAP">@item.idSAP - @item.Nombre</option>
                                     }
 
                                 </select>
@@ -231,6 +231,7 @@
                 </form>
 
             </div>
+
         </div>
     </div>
 
@@ -245,8 +246,6 @@
                         <h5>Reparaciones</h5>
                     </div>
                     <div class="col-md-4">
-                         
-
                     </div>
                 </div>
             </div>
@@ -272,59 +271,61 @@
                         <tbody>
                             @foreach (var item in Model.Objeto)
                             {
-                            <tr>
-                                <td>@item.id</td>
-                                <td>@item.idLlamada</td>
-                                @{var id = item.idTecnico.ToString();} 
-                                <td>@Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre</td>
-                      
-                                <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
-                                <td>@item.FechaModificacion.ToString("dd/MM/yyyy HH:mm:ss")</td>
-                                <td>@item.idProductoArreglar</td> 
-                                <td>
-                                    @switch (item.Status)
-                                    {
-                                        case 0:
-                                            {
-                                                <span class="mr-2"><span class="badge-dot badge-success"></span>Activo</span>
-                                                break;
-                                            }
-                                        case 1:
-                                            {
-                                                <span class="mr-2"><span class="badge-dot badge-danger"></span>Cerrado</span>
-                                                break;
-                                            }
-                                        case 2:
-                                            {
-                                                <span class="mr-2"><span class="badge-dot badge-danger"></span>Cerrado y Reparado</span>
-
-                                                break;
-                                            }
+                                <tr>
+                                    <td>@item.id</td>
+                                    <td>@item.idLlamada</td>
+                                    @{
+                                        var id = item.idTecnico.ToString();
                                     }
-                                </td>
-                                <td>
+                                    <td>@Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre</td>
+
+                                    <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
+                                    <td>@item.FechaModificacion.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                                    <td>@item.idProductoArreglar</td>
+                                    <td>
+                                        @switch (item.Status)
+                                        {
+                                            case 0:
+                                                {
+                                                    <span class="mr-2"><span class="badge-dot badge-success"></span>Activo</span>
+                                                    break;
+                                                }
+                                            case 1:
+                                                {
+                                                    <span class="mr-2"><span class="badge-dot badge-danger"></span>Cerrado</span>
+                                                    break;
+                                                }
+                                            case 2:
+                                                {
+                                                    <span class="mr-2"><span class="badge-dot badge-danger"></span>Cerrado y Reparado</span>
+
+                                                    break;
+                                                }
+                                        }
+                                    </td>
+                                    <td>
                                         @{
                                             string LLamada = Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "0" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().Status.Value.ToString();
-                                        
+
 
                                         }
                                         @(Model.Status.Where(a => a.idSAP == LLamada).FirstOrDefault() == null ? "" :Model.Status.Where(a => a.idSAP == LLamada).FirstOrDefault().Nombre)
-                                </td>
-                                <td>
-                                    @if (item.Status == 0)
-                                    {
+                                    </td>
+                                    <td>
+                                        @if (item.Status == 0)
+                                        {
 
-                                        <a asp-page="./Editar" asp-route-id="@item.id" title="Editar" class="btn btn-rounded btn-outline-warning"> Editar</a>
-                                    }
-                                    else
-                                    {
-                                        <a onclick="javascript: onClickModal('@item.id')" title="Cambiar Estado" class="btn btn-rounded btn-outline-warning">Activar</a>
+                                            <a asp-page="./Editar" asp-route-id="@item.id" title="Editar" class="btn btn-rounded btn-outline-warning"> Editar</a>
+                                        }
+                                        else
+                                        {
+                                            <a onclick="javascript: onClickModal('@item.id')" title="Cambiar Estado" class="btn btn-rounded btn-outline-warning">Activar</a>
 
-                                    }
-                                    &nbsp;
-                                    <a asp-page="./Observar" asp-route-id="@item.id" title="Editar" class="btn btn-rounded btn-outline-primary"> Observar</a>
-                                </td>
-                            </tr>
+                                        }
+                                        &nbsp;
+                                        <a asp-page="./Observar" asp-route-id="@item.id" title="Editar" class="btn btn-rounded btn-outline-primary"> Observar</a>
+                                    </td>
+                                </tr>
                             }
 
 
