--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
@@ -13,8 +13,8 @@
 
 }
 
-@using System.Globalization;
-@{
+    @using System.Globalization;
+    @{
     NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
     formato.CurrencyGroupSeparator = ",";
     formato.NumberDecimalSeparator = ".";
@@ -60,18 +60,18 @@
     </style>
 
 }
-@section scripts{
+    @section scripts{
 
 
     <script>
-        $(document).ready(function () {
-            jQuery(document).ready(function ($) {
+        $(document).ready(function() {
+            jQuery(document).ready(function($) {
 
             });
 
 
 
-            $(document).ready(function () {
+            $(document).ready(function() {
                 $('#tablita').DataTable();
             });
 
@@ -102,138 +102,138 @@
         var span = document.getElementsByClassName("close")[0];
 
         // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
+        span.onclick = function() {
             modal.style.display = "none";
         }
     </script>
 }
-@using Microsoft.AspNetCore.Http
-@using System;
-@using System.Collections.Generic;
-@using System.IO;
-@using System.Linq;
-@using System.Security.Claims;
-@using System.Threading.Tasks;
-@using Microsoft.AspNetCore.Mvc;
-@using Microsoft.AspNetCore.Mvc.RazorPages;
-@using Microsoft.Extensions.Configuration;
-@using Refit;
-@using Sicsoft.Checkin.Web.Models;
-@inject IHttpContextAccessor httpContextAccessor
+    @using Microsoft.AspNetCore.Http
+    @using System;
+    @using System.Collections.Generic;
+    @using System.IO;
+    @using System.Linq;
+    @using System.Security.Claims;
+    @using System.Threading.Tasks;
+    @using Microsoft.AspNetCore.Mvc;
+    @using Microsoft.AspNetCore.Mvc.RazorPages;
+    @using Microsoft.Extensions.Configuration;
+    @using Refit;
+    @using Sicsoft.Checkin.Web.Models;
+    @inject IHttpContextAccessor httpContextAccessor
 
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h5 class="title">Observar Repuestos</h5>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h5 class="title">Observar Repuestos</h5>
 
-                    </div>
+                        </div>
 
-                    <div class="col-sm-6" style="text-align: right">
+                        <div class="col-sm-6" style="text-align: right">
 
-                        <a asp-page="./Index" class="nav-link text-dark" style="text-decoration: underline;"><i class="fas fa-reply "></i>  Regresar</a>
+                            <a asp-page="./Index" class="nav-link text-dark" style="text-decoration: underline;"><i class="fas fa-reply "></i>  Regresar</a>
 
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card-body">
+                <div class="card-body">
 
-                <div class="row">
-                    <div class="col-md-4 pr-1">
+                    <div class="row">
+                        <div class="col-md-4 pr-1">
 
-                        <div class="form-group">
-                            <label>Producto</label>
-                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="Producto" readonly>
+                            <div class="form-group">
+                                <label>Producto</label>
+                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="Producto" readonly>
+
+                            </div>
+
 
                         </div>
 
 
-                    </div>
+
+
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
+                                <label>Status</label>
+                                <select id="status" class="form-control" asp-for="Encabezado.Status" readonly disabled="disabled">
+                                    <option value="0" selected>Abierto</option>
+
+
+                                    <option value="1">Cerrado </option>
 
 
 
+                                </select>
 
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Status</label>
-                            <select id="status" class="form-control" asp-for="Encabezado.Status" readonly disabled="disabled">
-                                <option value="0" selected>Abierto</option>
-
-
-                                <option value="1">Cerrado </option>
-
-
-
-                            </select>
 
                         </div>
 
+                        <div class="col-md-4 pr-1">
 
-                    </div>
+                            <div class="form-group">
+                                <label>Fecha Creación</label>
+                                <input type="date" class="form-control form-control-lg" id="desc" asp-for="Encabezado.FechaCreacion" readonly>
 
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Fecha Creación</label>
-                            <input type="date" class="form-control form-control-lg" id="desc" asp-for="Encabezado.FechaCreacion" readonly>
 
                         </div>
 
+                        <div class="col-md-4 pr-1">
 
-                    </div>
+                            <div class="form-group">
+                                <label>Ultima Actualización</label>
+                                <input type="datetime" class="form-control form-control-lg" id="desc" asp-for="Encabezado.FechaModificacion" readonly>
 
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Ultima Actualización</label>
-                            <input type="datetime" class="form-control form-control-lg" id="desc" asp-for="Encabezado.FechaModificacion" readonly>
 
                         </div>
+                        <div class="col-md-4 pr-1">
 
+                            <div class="form-group">
+                                <label>Técnico</label>
+                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="Tecnico" readonly>
 
-                    </div>
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Técnico</label>
-                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="Tecnico" readonly>
 
                         </div>
+                        <div class="col-md-4 pr-1">
 
+                            <div class="form-group">
+                                <label>Llamada</label>
+                                <input type="text" class="form-control form-control-lg" id="idLlamada" asp-for="Encabezado.idLlamada" readonly>
 
-                    </div>
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Llamada</label>
-                            <input type="text" class="form-control form-control-lg" id="idLlamada" asp-for="Encabezado.idLlamada" readonly>
 
                         </div>
+                        <div class="col-md-4 pr-1">
 
+                            <div class="form-group">
+                                <label>Cliente</label>
+                                <input type="text" class="form-control form-control-lg" id="desc" asp-for="Cliente" readonly>
 
-                    </div>
-                    <div class="col-md-4 pr-1">
+                            </div>
 
-                        <div class="form-group">
-                            <label>Cliente</label>
-                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="Cliente" readonly>
 
                         </div>
+                        <div class="col-md-4 pl-1">
 
+                            <div class="form-group">
+                                <label>Diagnóstico</label>
+                                <select id="idDiag" class="form-control" asp-for="Encabezado.idDiagnostico" disabled="disabled" readonly>
+                                    <option value="0" selected>Seleccione</option>
 
-                    </div>
-                    <div class="col-md-4 pr-1">
-
-                        <div class="form-group">
-                            <label>Diagnóstico</label>
-                            <select id="idDiag" class="form-control" asp-for="Encabezado.idDiagnostico" disabled="disabled" readonly>
-                                <option value="0" selected>Seleccione</option>
-
-                                @foreach (var item in Model.Diagnosticos)
+                                    @foreach (var item in Model.Diagnosticos)
                                 {
 
                                     <option value="@item.id"> @item.id - @item.Descripcion </option>
@@ -244,6 +244,17 @@
 
 
                             </select>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="col-md-4 pr-1">
+
+                        <div class="form-group">
+                            <label>Asunto de la Llamada</label>
+                            <input class="form-control" asp-for="InputLlamada.Asunto" readonly />
 
                         </div>
 
@@ -267,8 +278,6 @@
                         <h5>Repuestos</h5>
                     </div>
                     <div class="col-md-4">
-
-
                     </div>
                 </div>
             </div>
@@ -291,13 +300,13 @@
                         <tbody>
                             @foreach (var item in Model.Control)
                             {
-                            <tr>
-                                <td>@item.Item </td>
-                                <td>@item.ItemName </td>
+                                <tr>
+                                    <td>@item.Item </td>
+                                    <td>@item.ItemName </td>
 
-                                <td>@item.CantidadUsado</td>
-                                @*<td>@(Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault() == null ? "Sin Diagnostico": Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault().Descripcion  )</td>*@
-                            </tr>
+                                    <td>@item.CantidadUsado</td>
+                                    @*<td>@(Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault() == null ? "Sin Diagnostico": Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault().Descripcion  )</td>*@
+                                </tr>
                             }
 
 
@@ -334,8 +343,6 @@
                         <h5>Movimientos</h5>
                     </div>
                     <div class="col-md-4">
-
-
                     </div>
                 </div>
             </div>
